<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
    <item
        android:id="@+id/inicio"
        android:checked="true"
        android:icon="@drawable/ic_dashboard_white_24dp"
        android:title="@string/inicio" />

    <item
        android:id="@+id/pedidos"
        android:icon="@drawable/ic_add_shopping_cart_white_24dp"
        android:title="@string/pedidos" />

    <item
        android:id="@+id/clientes"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/clientes" />

    <item
        android:id="@+id/relatorios"
        android:icon="@drawable/ic_equalizer_white_48dp"
        android:title="@string/relatorios" />
    </group>
</menu>
